pages linking updated

--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="form-style.css">
 </head>
 <body>
-    <form action=""><h2 style="text-align: center;">Simple Form </h2>
+    <form action=""><h5 class="back"><a href="./navigation.html">Back</a></h5><h2 style="text-align: center;">Simple Form </h2>
         <label for="name"><h5>Name: </h5> <input type="text" id="name" placeholder="Enter your name"></label>
         <label for="city"><h5>City: </h5><input type="text" id="city" placeholder="City"></label>
         <label for="phon"><h5>Mobile: </h5><input type="number" placeholder="Mobile no."></label>
@@ -34,6 +34,7 @@
         </label>
         <label for="file" id="file"><b>Upload your pic </b><input type="file"> </label>
         <label for="submit"><input type="submit" value="sumit"></label>
+        <h5 class="back"><a href="./navigation.html">Back</a></h5>
         
     </form>
 </body>
