--- a/form1.html
+++ b/form1.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="form1-style.css">
 </head>
 <body>
+    <div class="back">
+            <h4><a href="./navigation.html">back to home page</a>
+                </h4>
+        </div>
     <div class="form-container">
+        
         <form action="#">
             <H2>Form Design with Background img</H2>
 
