--- a/form2.html
+++ b/form2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="form2-style.css">
 </head>
 <body>
+    <div class="back"><a href="./navigation.html">Go back</a></div>
     <div class="container"> 
         <div class="logo"><img src="./logo1.png" alt=""><br><h4>Form Design</h4></div>
         <form action="">
