--- a/form3.html
+++ b/form3.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="form3-style.css">
 </head>
 <body>
-    <div class="form-containder">
-        <h4>Registration From</h4>
+   
+    <div class="form-containder"> 
+        <h6><a href="./navigation.html">Go back</a></h6>
+
+        <h4>Registration Form</h4>
         <form method="post">
             <div class="form-content">
                 <div class="form-input">
