--- a/navigation.html
+++ b/navigation.html
@@ -12,10 +12,10 @@
         <div class="nav-container">
             <div class="logo"><a href="#"><img src="./logo1.png" alt=""></a></div>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Courses</a>
-                <a href="#">Blog</a>
-                <a href="#">Code Gallery</a>
+                <a href="./form.html">Simple Form</a>
+                <a href="./form1.html">3 clm design Form</a>
+                <a href="./form2.html">Iec Design Form</a>
+                <a href="./form3.html">Responsive Registration Form</a>
                 <a href="#" class="last-a">Contact us</a>
             </nav>
         </div>
